# SPDX-License-Identifier: BSD-2-Clause
cmake_minimum_required(VERSION 3.22)

# Remove -rdynamic
set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS)

include_directories(${GNUEFI_DIR}/inc)

# Options that will be used only when building the actual kernel, not when
# building kernel's code for unit testing.

set(ACTUAL_KERNEL_ONLY_FLAGS_LIST "")

list(
   APPEND ACTUAL_KERNEL_ONLY_FLAGS_LIST

   -D__ACTUAL_TILCK_KERNEL_BINARY__
   -mcmodel=kernel
   -fno-pic

   ${LOWLEVEL_BINARIES_FLAGS_LIST}
   ${DISABLE_FPU_FLAGS_LIST}
)

if (KERNEL_GCOV)
   list(APPEND ACTUAL_KERNEL_ONLY_FLAGS_LIST -fprofile-arcs -ftest-coverage)
endif()

JOIN("${ACTUAL_KERNEL_ONLY_FLAGS_LIST}" ${SPACE} ACTUAL_KERNEL_ONLY_FLAGS)

set(ARCH_START_FILE "start.S")
set(ARCH_SOURCES_GLOB "*.S" "*.c")

file(GLOB ARCH_SOURCES ${GLOB_CONF_DEP} ${ARCH_SOURCES_GLOB})

file(
   GLOB
   ARCH_FAMILY_SOURCES
   ${GLOB_CONF_DEP}

   "${PROJ_ROOT}/kernel/arch/${ARCH_FAMILY}/*.c"
   "${PROJ_ROOT}/kernel/arch/${ARCH_FAMILY}/*/*.c"
   "${PROJ_ROOT}/common/arch/${ARCH_FAMILY}/*.c"
)

# Override CMake's default executable output directory
set(EXECUTABLE_OUTPUT_PATH ${BUILD_DIR})

add_executable(

   tilck_unstripped

   ${ARCH_START_FILE}
   ${ARCH_SOURCES}
   ${ARCH_FAMILY_SOURCES}
   ${KERNEL_NOARCH_SOURCES}
)

set(
   KERNEL_LINK_FLAGS_LIST

   -nostdlib
   -static

   -Wl,--no-warn-rwx
   -Wl,--build-id=none
   -Wl,--script=${KERNEL_SCRIPT}
   -Wl,-z,max-page-size=0x1000
)

JOIN("${KERNEL_LINK_FLAGS_LIST}" ${SPACE} KERNEL_LINK_FLAGS)

set_target_properties(

   tilck_unstripped

   PROPERTIES
      COMPILE_FLAGS "${KERNEL_FLAGS} ${ACTUAL_KERNEL_ONLY_FLAGS}"
      LINK_FLAGS "${KERNEL_LINK_FLAGS}"
      LINK_DEPENDS ${KERNEL_SCRIPT}
)

build_all_modules(tilck_unstripped)

# -lgcc is necessary for things like 64 bit integers in 32 bit mode.
target_link_libraries(tilck_unstripped gcc)

if (KRN_SYMBOLS)

   add_custom_command(
      OUTPUT
         ${KERNEL_FILE}
      COMMAND
         ${BUILD_SCRIPTS}/tilck_set_commit_hash ${ELFHACK} ${KERNEL_UNSTRIPPED}
      COMMAND
         ${CMAKE_STRIP} --strip-debug ${KERNEL_UNSTRIPPED} -o ${KERNEL_FILE}
      COMMAND
         ${ELFHACK} ${KERNEL_FILE} --copy .symtab .Symtab
      COMMAND
         ${ELFHACK} ${KERNEL_FILE} --copy .strtab .Strtab
      COMMAND
         ${ELFHACK} ${KERNEL_FILE} --link .Symtab .Strtab
      COMMAND
         ${ELFHACK} ${KERNEL_FILE} --rename .symtab osymtab
      COMMAND
         ${ELFHACK} ${KERNEL_FILE} --rename .strtab ostrtab
      COMMAND
         ${ELFHACK} ${KERNEL_FILE} --rename .Symtab .symtab
      COMMAND
         ${ELFHACK} ${KERNEL_FILE} --rename .Strtab .strtab
      COMMAND
         ${ELFHACK} ${KERNEL_FILE} --move-metadata
      COMMAND
         ${ELFHACK} ${KERNEL_FILE} --drop-last-section
      COMMAND
         ${ELFHACK} ${KERNEL_FILE} --drop-last-section
      COMMAND
         ${ELFHACK} ${KERNEL_FILE} --set-phdr-rwx-flags 2 r
      DEPENDS
         ${ELFHACK} tilck_unstripped
      WORKING_DIRECTORY
         ${PROJ_ROOT}
      COMMENT
         "Preparing kernel's stripped binary"
   )

else()

   add_custom_command(
      OUTPUT
         ${KERNEL_FILE}
      COMMAND
         ${BUILD_SCRIPTS}/tilck_set_commit_hash ${ELFHACK} ${KERNEL_UNSTRIPPED}
      COMMAND
         ${CMAKE_STRIP} --strip-debug ${KERNEL_UNSTRIPPED} -o ${KERNEL_FILE}
      COMMAND
         ${ELFHACK} ${KERNEL_FILE} --move-metadata
      DEPENDS
         ${ELFHACK} tilck_unstripped
      WORKING_DIRECTORY
         ${PROJ_ROOT}
      COMMENT
         "Preparing kernel's stripped binary"
   )
endif()

add_custom_target(

    kernel ALL

    DEPENDS
        ${KERNEL_FILE}
)

